# quanta

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README  README.md  build-data-pack.py  compile-shaders.py  env.sh  meson.build  meson_options.txt  thirdparty.txt
data/lua/: init.lua
data/materials/: tri.json
data/materials/shadersd3d11/: tri.frag.dxbc  tri.vert.dxbc  tri_fs.dxbc  tri_vs.dxbc
data/materials/shadersvulkan/: tri.frag.spv  tri.vert.spv
data/shaders/: tri_fs.dxbc
design/: observer0.psd  story0.txt
inc/: physfs.h
inc/fmt/: core.h  format.h  os.h
inc/rapidjson/: document.h
lib/win64release/: glew32s.lib
src/: CMakeLists.txt  meson.build
src/layer1/: config.h  entrypoint.cpp  log.cpp  log.h  meson.build  perfclock.cpp  perfclock.h
src/layer1/dep/: meson.build
src/layer1/dep/fmt/: meson.build
src/layer1/dep/physfs/: meson.build  physfs_internal.h
src/layer1/filesystem/: meson.build  pakar_struct.h  runtime.cpp  runtime.h  stream.h
src/layer1/graph/: game.cpp  game.h  meson.build  node.cpp  node.h  service.h
src/layer1/renderer/: camera.cpp  camera.h  defs.h  gpuresource.h  indexbuffer.h  input.cpp  input.h  inputlayout.h  material.cpp  material.h  materialjson.cpp  materialjson.h  mesh.cpp  mesh.h  meson.build  prop.cpp  prop.h  renderable.h  rendertarget.h  runtime.cpp  runtime.h  shader.cpp  shader.h  shaderparameterbuffer.h  stb_image.c  stb_image.h  texture.h  texture2d.h  transform.cpp  transform.h  vertexbuffer.h
src/layer1/renderer/imgui/: imconfig.h  imgui.cpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  meson.build
src/layer1/renderer/subsystems/: meson.build  required.h  rhi.h
src/layer1/renderer/subsystems/d3d11/: d3d11indexbuffer.cpp  d3d11indexbuffer.h  d3d11inputlayout.cpp  d3d11inputlayout.h  d3d11parameterbuffer.cpp  d3d11parameterbuffer.h  d3d11renderer.cpp  d3d11renderer.h  d3d11rendertarget.cpp  d3d11rendertarget.h  d3d11required.h  d3d11shader.cpp  d3d11shader.h  d3d11texture2d.cpp  d3d11texture2d.h  d3d11vertexbuffer.cpp  d3d11vertexbuffer.h  imgui_impl_d3d11.cpp  imgui_impl_d3d11.h  meson.build
src/layer1/renderer/subsystems/d3d11/shaders/: tri_fs.hlsl  tri_vs.hlsl
src/layer1/renderer/subsystems/null/: meson.build  nullrenderer.cpp  nullrenderer.h
src/layer1/renderer/subsystems/opengl/: glad.c  glad.h  glindexbuffer.cpp  glindexbuffer.h  glrenderer.cpp  glrenderer.h  glshader.cpp  glshader.h  glvertexbuffer.cpp  glvertexbuffer.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  meson.build  openglindexbuffer.cpp  openglindexbuffer.h  openglinputlayout.cpp  openglinputlayout.h  openglparameterbuffer.cpp  openglparameterbuffer.h  openglrenderer.cpp  openglrenderer.h  openglrendertarget.cpp  openglrendertarget.h  openglrequired.h  openglshader.cpp  openglshader.h  opengltexture2d.cpp  opengltexture2d.h  openglvertexbuffer.cpp  openglvertexbuffer.h
src/layer1/renderer/subsystems/vulkan/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  meson.build  vk_buffer.cpp  vk_buffer.h  vk_device.cpp  vk_device.h  vk_instance.cpp  vk_instance.h  vk_mem_alloc.h  vk_surface.cpp  vk_surface.h  volk.c  vulkanbuffer.cpp  vulkanbuffer.h  vulkanctx.cpp  vulkanctx.h  vulkanimage.cpp  vulkanimage.h  vulkanindexbuffer.cpp  vulkanindexbuffer.h  vulkaninputlayout.cpp  vulkaninputlayout.h  vulkanparameterbuffer.cpp  vulkanparameterbuffer.h  vulkanrenderer.cpp  vulkanrenderer.h  vulkanrendertarget.cpp  vulkanrendertarget.h  vulkanrequired.h  vulkanshader.cpp  vulkanshader.h  vulkantexture2d.cpp  vulkantexture2d.h  vulkanvertexbuffer.cpp  vulkanvertexbuffer.h
src/level0/: CMakeLists.txt  cmd.cpp  cmd.h  common.cpp  common.h  cvar.cpp  cvar.h  log.cpp  log.h  main.cpp  pch.h  perfclock.cpp  perfclock.h  snprintf.h  sys.cpp  sys.h  utf8.c  utf8.h  util.h
src/level0/component/: CMakeLists.txt  transform.h
src/level0/crypto/: CMakeLists.txt  md5.c  md5.h
src/level0/cvarcmd/: service.cpp  service.h
src/level0/dependencies/: CMakeLists.txt
src/level0/dependencies/fmt/: CMakeLists.txt
src/level0/dependencies/imgui/: CMakeLists.txt  imconfig.h
src/level0/dependencies/physfs/: CMakeLists.txt
src/level0/filesystem/: CMakeLists.txt  service.cpp  service.h
src/level0/game/: CMakeLists.txt  game.cpp  game.h  game_service.cpp  game_service.h
src/level0/input/: service.cpp  service.h
src/level0/render/: CMakeLists.txt  api.h  defs.h  presenter.cpp  presenter.h  service.cpp  service.h
src/level0/render/vulkan/: CMakeLists.txt  api.cpp  api.h  api_allocator.cpp  api_buffer.cpp  api_bufferview.cpp  api_commandbuffer.cpp  api_commandpool.cpp  api_computepipeline.cpp  api_constenum.cpp  api_descriptorpool.cpp  api_descriptorset.cpp  api_descriptorsetlayout.cpp  api_device.cpp  api_fence.cpp  api_framebuffer.cpp  api_graphicspipeline.cpp  api_image.cpp  api_imageview.cpp  api_imgui.cpp  api_physicaldevice.cpp  api_pipelinecache.cpp  api_pipelinelayout.cpp  api_renderpass.cpp  api_sampler.cpp  api_semaphore.cpp  api_shadermodule.cpp  api_swapchain.cpp  vk_mem_alloc.cpp  volk.c  volk.h
src/pch/: pch.h  str_format.h
src/physfs/: physfs_internal.h
src/shaders/: common.hlsl  screen.frag.hlsl  screen.vert.hlsl  tri.frag.hlsl  tri.vert.hlsl
src/shaders/a/: screen.frag.spv  screen.vert.spv  test.vert.spv
tools/: CMakeLists.txt  Makefile  build-data-pack.py  compile-shaders-v2.py  compile-shaders.py  gen-shader-dxc-dxil.py  gen-shader-dxc-spirv.py  gen-shader-glslc-spirv.py  meson.build  serialize.h
tools/d3d11shadercomp/: comp.cpp  meson.build
tools/magnifique/: magnifique.cpp
tools/pakar/: meson.build  pakar.c  pakar.h  serialize.c  serialize.h  snprintf.h
