srcs += files([
	'volk.c',
	'vk_mem_alloc.cpp',

	'vulkanrenderer.cpp',
	'imgui_impl_vulkan.cpp',

	'vulkanbuffer.cpp',
	'vulkanctx.cpp',
	'vulkanimage.cpp',

	'vulkanindexbuffer.cpp',
	'vulkaninputlayout.cpp',
	'vulkanparameterbuffer.cpp',
	'vulkanshader.cpp',
	'vulkantexture2d.cpp',
	'vulkanvertexbuffer.cpp',
])
